# instrew

./: .gitignore  callgrind.out.52927  callgrind.out.53033  meson.build
.github/workflows/: alpine-llvm-18-aarch64.yml  ci.yml
.test/: .gdb_history  a.out  build-exit.sh  fact_rv64.ll  func_1010c.elf  func_10144.elf  func_1016e.elf  func_10184.elf  sc.S  sc.c
.test/gdb/: .gdbinit
.test/rv64/: Makefile  build.sh  fact_rv64.S  fib.c  fib_nolc.c  fib_nopf.c  rec.c  rv64_runtime.S
client/: dispatch.c  emulate.c  main.c  memory.c  meson.build  minilibc.c  plt.inc  rtld.c  rv64_crt0.c.bak  translator.c
server/: callconv.cc  codegenerator.cc  rewriteserver.cc
test/: meson.build
test/riscv64/: build-rec.sh  exit.S  fib_nolc.c  lrsc-loop.S  meson.build  rec_nolibc.c  rv64_runtime.S
test/x86_64/: meson.build  stosb-call.S
