
triple = 'riscv64-linux-gnu'
cases = [
  {'name': 'exit', 'src': files('exit.S')},
  {'name': 'lrsc-loop', 'src': files('lrsc-loop.S')},
  
  {'name': 'fib_nolc', 'src': files('fib_nolc.c')},
  {'name': 'rec_nolibc', 'src': files('rec_nolibc.c')},
  {'name': 'fact_rv64', 'src': files('fact_rv64.S', 'rv64_runtime.S')},
]
